fix: swiper gap

--- a/src/assets/styles/components/_hero.scss
+++ b/src/assets/styles/components/_hero.scss
@@ -143,6 +143,7 @@ swiper-container{
     display: flex;
     align-items: center;
     width: 100%;
+    gap: 40px;
     -webkit-transition-timing-function: linear !important;
     transition-timing-function: linear !important;
     position: relative;
